[package]
name = "colorstyle"
license = "GPL-3.0"
version = "1.0.2"
edition = "2018"
authors = ["wandercn<wander@ffactory.org>"]
description = "ColorStyle is a library of styles for command-line text.ColorStyle 是一个用于命令行文本的样式库。"
homepage = "https://colorstyle.ffactory.org"
repository = "https://github.com/code-translation/colorstyle"
keywords = ["color","text-style","cli-color","text-color","terminal-color"]
categories= ["command-line-interface","accessibility","text-processing","value-formatting"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
[dependencies]
